--- a/_posts/2014-10-15-fury.markdown
+++ b/_posts/2014-10-15-fury.markdown
@@ -18,6 +18,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/anP0tygzniIok6L3OxcSZ9TYCF3.jpg
 - http://image.tmdb.org/t/p/w300/cXdx9wov6TKnCp8u6bNVVuf1Hyj.jpg
 overview: Last months of World War II in April 1945. As the Allies make their final push in the European Theater, a battle-hardened U.S. Army sergeant in the 2nd Armored Division named Wardaddy commands a Sherman tank called "Fury" and its five-man crew on a deadly mission behind enemy lines. Outnumbered and outgunned, Wardaddy and his men face overwhelming odds in their heroic attempts to strike at the heart of Nazi Germany.
-poster: http://image.tmdb.org/t/p/w500/fIHF63oznk2PXlYM6pPfhnOB3SD.jpg/
+poster: http://image.tmdb.org/t/p/w500/fIHF63oznk2PXlYM6pPfhnOB3SD.jpg
 backdrop: http://image.tmdb.org/t/p/original/pKawqrtCBMmxarft7o1LbEynys7.jpg
 ---
