--- a/_posts/2016-02-09-deadpool.markdown
+++ b/_posts/2016-02-09-deadpool.markdown
@@ -18,6 +18,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/gUG9fnudV5Ev1MIr3adngn1GuZJ.jpg
 - http://image.tmdb.org/t/p/w300/wkm8YvulYwuB4pxEvOAlwv8AWdr.jpg
 overview: Based upon Marvel Comics’ most unconventional anti-hero, DEADPOOL tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.
-poster: http://image.tmdb.org/t/p/w500/inVq3FRqcYIRl2la8iZikYYxFNR.jpg/
+poster: http://image.tmdb.org/t/p/w500/inVq3FRqcYIRl2la8iZikYYxFNR.jpg
 backdrop: http://image.tmdb.org/t/p/original/n1y094tVDFATSzkTnFxoGZ1qNsG.jpg
 ---
