--- a/_posts/2007-08-17-superbad.markdown
+++ b/_posts/2007-08-17-superbad.markdown
@@ -16,6 +16,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/kxeJQa9Ae7Ns1J1b5012SMeyXn2.jpg
 - http://image.tmdb.org/t/p/w300/pioU58yFxKrazfWD9CZCXyyCf74.jpg
 overview: High school best buddies are facing separation anxiety as they prepare to go off to college. While attempting to score alcohol for a party with help from their fake ID-toting friend, "McLovin", the guys' evening takes a turn into chaotic territory.
-poster: http://image.tmdb.org/t/p/w500/qxjq6uNSHBBVl8phdXsyVw2GJei.jpg/
+poster: http://image.tmdb.org/t/p/w500/qxjq6uNSHBBVl8phdXsyVw2GJei.jpg
 backdrop: http://image.tmdb.org/t/p/original/kQzcHOxcjZ8hG0bF0tMNPghAFe0.jpg
 ---
