--- a/_posts/2015-01-23-everly.markdown
+++ b/_posts/2015-01-23-everly.markdown
@@ -17,6 +17,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/yFPTPGg04TuZJOvYb4zH04aBwK5.jpg
 - http://image.tmdb.org/t/p/w300/uasHB6t757gRtUFToPDpHkulo59.jpg
 overview: After she betrays a powerful mob boss, a woman matches wits and weaponry with a legion of killers who are out to collect the bounty on the heads of her and her family.
-poster: http://image.tmdb.org/t/p/w500/dU7fJCSeZCjnoqb57HUQCZwwAhA.jpg/
+poster: http://image.tmdb.org/t/p/w500/dU7fJCSeZCjnoqb57HUQCZwwAhA.jpg
 backdrop: http://image.tmdb.org/t/p/original/pIZTDlgwbGojhUymHkPrdpTwdIV.jpg
 ---
