--- a/_posts/2015-05-28-kung-fury.markdown
+++ b/_posts/2015-05-28-kung-fury.markdown
@@ -19,6 +19,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/8NqZvjdsMIT3HgfdltoMBqxsEcB.jpg
 - http://image.tmdb.org/t/p/w300null
 overview: During an unfortunate series of events, a friend of Kung Fury is assassinated by the most dangerous kung fu master criminal of all time, Adolf Hitler, a.k.a Kung Führer.  Kung Fury decides to travel back in time to Nazi Germany in order to kill Hitler and end the Nazi empire once and for all.
-poster: http://image.tmdb.org/t/p/w500/oJWzpGCLIj3uYa0ux19T2WwzTOf.jpg/
+poster: http://image.tmdb.org/t/p/w500/oJWzpGCLIj3uYa0ux19T2WwzTOf.jpg
 backdrop: http://image.tmdb.org/t/p/original/W0MNr3XN95U5KLD9xIQD96YKcS.jpg
 ---
