--- a/_posts/2015-08-28-visions.markdown
+++ b/_posts/2015-08-28-visions.markdown
@@ -17,6 +17,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/3EdsBXcwZFX2Txjl4uLhLgTU8SK.jpg
 - http://image.tmdb.org/t/p/w300/15aRHYLwt9xJWv8PCcxV7ylc4qZ.jpg
 overview: After moving to a vineyard with her family, a pregnant woman experiences horrifying visions.
-poster: http://image.tmdb.org/t/p/w500/wL7Wg0pARqzzlxAlBgKagEYoLXI.jpg/
+poster: http://image.tmdb.org/t/p/w500/wL7Wg0pARqzzlxAlBgKagEYoLXI.jpg
 backdrop: http://image.tmdb.org/t/p/original/g0oJcym9RtRgY2OrIGqKdrltxZC.jpg
 ---
