--- a/_posts/2015-10-26-spectre.markdown
+++ b/_posts/2015-10-26-spectre.markdown
@@ -18,6 +18,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/bPtNS4p3CEDt3Uo9khMCLyQUa0W.jpg
 - http://image.tmdb.org/t/p/w300/19gU2MSmsauB9TIh8gcd8JzvD2g.jpg
 overview: A cryptic message from Bond’s past sends him on a trail to uncover a sinister organization. While M battles political forces to keep the secret service alive, Bond peels back the layers of deceit to reveal the terrible truth behind SPECTRE.
-poster: http://image.tmdb.org/t/p/w500/mSvpKOWbyFtLro9BjfEGqUw5dXE.jpg/
+poster: http://image.tmdb.org/t/p/w500/mSvpKOWbyFtLro9BjfEGqUw5dXE.jpg
 backdrop: http://image.tmdb.org/t/p/original/wVTYlkKPKrljJfugXN7UlLNjtuJ.jpg
 ---
