--- a/_posts/2016-02-19-the-witch.markdown
+++ b/_posts/2016-02-19-the-witch.markdown
@@ -16,6 +16,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/zqvpAuiocN9hHjg6f9Dqu2S8y9x.jpg
 - http://image.tmdb.org/t/p/w300/nEcvqwrXakqhOX8fa3WZIhGAjA1.jpg
 overview: New England in the 1630s, William and Katherine lead a devout Christian life with five children, homesteading on the edge of an impassable wilderness. When their newborn son vanishes and crops fail, the family turns on one another. Beyond their worst fears, a supernatural evil lurks in the nearby wood.
-poster: http://image.tmdb.org/t/p/w500/jfGsfzq5JrMAKbAOV2TmhsOs3tf.jpg/
+poster: http://image.tmdb.org/t/p/w500/jfGsfzq5JrMAKbAOV2TmhsOs3tf.jpg
 backdrop: http://image.tmdb.org/t/p/original/dIkFrbXX9OrUqPcrunJ6GSweTML.jpg
 ---
