--- a/_posts/2016-03-02-room.markdown
+++ b/_posts/2016-03-02-room.markdown
@@ -16,6 +16,6 @@ actorsImages:
 - http://image.tmdb.org/t/p/w300/jztWT5I6I2Dyhma0FQFR2KLL7iU.jpg
 - http://image.tmdb.org/t/p/w300/Atg0mSjK9Dl98YBsFvBuGO8PG5m.jpg
 overview: Jack is a young boy of 5 years old who has lived all his life in one room. He believes everything within it are the only real things in the world. But what will happen when his Ma suddenly tells him that there are other things outside of Room?
-poster: http://image.tmdb.org/t/p/w500/eqFckcHuFCT1FrzLOAvXBb4jHwq.jpg/
+poster: http://image.tmdb.org/t/p/w500/eqFckcHuFCT1FrzLOAvXBb4jHwq.jpg
 backdrop: http://image.tmdb.org/t/p/original/tBhp8MGaiL3BXpPCSl5xY397sGH.jpg
 ---
